# Editor2D

./: .gitignore  CMakeLists.txt  main.cpp
include/EditorUI/: EditorUI.hpp
include/Window/: Window.hpp
src/: EditorUI.cpp
